Added client caching, as long with update button and a progess monitor for the download. Also packed resources folder and settings temporarily into the same jar -- going to have it later on unpack those in the user's home folder like how minecraft does it.